src/objects/Storybank_Submitted__c.object
<CustomObject>
    <fields>
        <fullName>Age_range__c</fullName>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>13-18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19-34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35-64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agree_to_Terms_of_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agree to Terms of Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribution__c</fullName>
        <inlineHelpText>How submitter wants to be known...</inlineHelpText>
        <label>Pseudonym</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Category Chosen by Submitter</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing and Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Email address of Submitter</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Embed_URL__c</fullName>
        <label>Embed URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black or African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic or Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience_w_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the storyteller have experience interacting with the media?</inlineHelpText>
        <label>Experience w/ Media?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Copy__c</fullName>
        <label>Final Copy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>First Name of Submitter</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rather Not Say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Family/friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Categories__c</fullName>
        <label>Internal Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Cutting Poverty in Half</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating Good Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strengthening Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoting Economic Security</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>Last Name of Submitter</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominator_Address__c</fullName>
        <label>Nominator Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nominator_City__c</fullName>
        <label>Nominator City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominator_Email_Address__c</fullName>
        <label>Nominator Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Nominator_First__c</fullName>
        <label>Nominator First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominator_Last_Name__c</fullName>
        <label>Nominator Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominator_Notes__c</fullName>
        <label>Nominator Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nominator_Organization__c</fullName>
        <inlineHelpText>Like &apos;Offered Organization&quot;... this is what the person submitting the form typed, not the official name of the organization this contact is associated with.</inlineHelpText>
        <label>Nominator Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominator_Phone__c</fullName>
        <label>Nominator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nominator_Postal_Code__c</fullName>
        <label>Nominator Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominator_State_pick__c</fullName>
        <label>Nominator State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Offered Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Category__c</fullName>
        <label>Other Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Post_to_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked by WF, triggers post to Chatter group</inlineHelpText>
        <label>Post to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexual_Orientation__c</fullName>
        <inlineHelpText>For use on back-end only.</inlineHelpText>
        <label>Sexual Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Heterosexual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homosexual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bisexual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_pick__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Summary__c</fullName>
        <label>Story Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Storybank_Name__c</fullName>
        <label>Storybank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storyteller_Notes__c</fullName>
        <label>Storyteller Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Storyteller_Team_Source__c</fullName>
        <description>Storybank Team&apos;s name to track source of Storyteller Contact on the Contact object. Should be set by a workflow when the public form is submitted. This text value will be &apos;upserted&apos; into the Contact record&apos;s Team Source multi-value picklist.</description>
        <label>Storyteller Team Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <label>Submission Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_URL__c</fullName>
        <inlineHelpText>URL this story was submitted from - then we can set certain defaults</inlineHelpText>
        <label>Submission URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>This is the date the story was submitted to Storybank - defaults to Today&apos;s date but can modified if capturing older stories</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_Story__c</fullName>
        <inlineHelpText>Story submitted from web</inlineHelpText>
        <label>Submitted Story</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Source__c</fullName>
        <label>Team Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Storybank Team&apos;s name to track source of the story. Should be set by a workflow when the public form is submitted. This text value will be copied to the Storybank record if it is included in the Field Set.</description>
        <label>Team</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <inlineHelpText>URL of Video being submitted</inlineHelpText>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video</label>
        <type>Checkbox</type>
    </fields>
    <label>Storybank - Submitted</label>
    <listViews>
        <fullName>All_Stories</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Category__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone__c</columns>
        <columns>State_pick__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Stories</label>
    </listViews>
    <listViews>
        <fullName>Nominated_Stories</fullName>
        <columns>NAME</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Category__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone__c</columns>
        <columns>State_pick__c</columns>
        <columns>Nominator_Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nominator_First__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Nominator_Last_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Nominator_Email_Address__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Nominated Stories</label>
    </listViews>
    <listViews>
        <fullName>Status_Accepted_Stories</fullName>
        <columns>NAME</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Category__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone__c</columns>
        <columns>State_pick__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Status - Accepted Stories</label>
    </listViews>
    <listViews>
        <fullName>Status_Converted_Stories</fullName>
        <columns>NAME</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Category__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone__c</columns>
        <columns>State_pick__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Converted</value>
        </filters>
        <label>Status - Converted Stories</label>
    </listViews>
    <listViews>
        <fullName>Status_In_Progress_Stories</fullName>
        <columns>NAME</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Category__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone__c</columns>
        <columns>State_pick__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Status - In Progress Stories</label>
    </listViews>
    <listViews>
        <fullName>Status_New_Stories</fullName>
        <columns>NAME</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Category__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone__c</columns>
        <columns>State_pick__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Status - New Stories</label>
    </listViews>
    <listViews>
        <fullName>Status_Rejected_Stories</fullName>
        <columns>NAME</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Category__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Phone__c</columns>
        <columns>State_pick__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Status - Rejected Stories</label>
    </listViews>
    <nameField>
        <displayFormat>SBS-{000000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storybank - Submitted</pluralLabel>
    <recordTypes>
        <fullName>Text_Converted</fullName>
        <active>true</active>
        <description>For stories submitted as Text and Converted to Approved Stories</description>
        <label>Text Converted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Text_Submission</fullName>
        <active>true</active>
        <description>For stories submitted as Text</description>
        <label>Text Submission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video_Converted</fullName>
        <active>true</active>
        <description>For stories submitted with link to Video and Converted to Approved Stories</description>
        <label>Video Converted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video_Submission</fullName>
        <active>true</active>
        <description>For stories submitted with link to Video</description>
        <label>Video Submission</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>